--- a/3 - Minigame/index.html
+++ b/3 - Minigame/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="game-over-menu">
                 <p>Game Over</p>
-                <p id="round-survived">Round Survived: </p>
+                <p class="rounds-survived">Round Survived: </p>
                 <button class = "playBtn">PLAY</button>
             </div>
             <div class="object-container"></div>
